# jupydeep

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  README.md  junit.xml  package.json  postcss.config.js  pyproject.toml  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  check-release.yml  prep-release.yml  publish-release.yml
assets/agent_specs/: monktang.yaml  wukong.yaml
jupydeep/: __init__.py  __version__.py  extension.py
jupydeep/agent/: __init__.py  _base.py
jupydeep/engine/: __init__.py  _base.py  _engine.py  _global.py  _llm.py  _mcp.py  _skill.py
jupydeep/handlers/: chat.py  engine.py
jupydeep/tests/: __init__.py  conftest.py  test_extension_load.py
jupydeep/utils/: __init__.py  logging.py
jupyter-config/nb-config/: jupydeep.json
jupyter-config/server-config/: jupydeep.json
schema/: agent.json  global.json  llm.json  mcp.json  skill.json
src/: index.ts
src/__tests__/: jupydeep.spec.ts
src/components/ai-elements/: actions.tsx  agent.tsx  artifact.tsx  attachments.tsx  audio-player.tsx  canvas.tsx  chain-of-thought.tsx  checkpoint.tsx  code-block.tsx  commit.tsx  confirmation.tsx  connection.tsx  context.tsx  controls.tsx  conversation.tsx  edge.tsx  environment-variables.tsx  file-tree.tsx  image.tsx  inline-citation.tsx  jsx-preview.tsx  loader.tsx  message.tsx  mic-selector.tsx  model-selector.tsx  node.tsx  open-in-chat.tsx  package-info.tsx  panel.tsx  persona.tsx  plan.tsx  prompt-input.tsx  queue.tsx  reasoning.tsx  response.tsx  sandbox.tsx  schema-display.tsx  shimmer.tsx  snippet.tsx  sources.tsx  (+11 more)
src/components/chat/: ChatBot.tsx
src/components/chat/parts/: Part.tsx  tool-approval-prompt.tsx  tool-part.tsx
src/components/ui/: accordion.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  checkbox.tsx  combobox.tsx  command.tsx  dialog.tsx  direction.tsx  drawer.tsx  dropdown-menu.tsx  field.tsx  hover-card.tsx  input-group.tsx  input.tsx  kbd.tsx  label.tsx  native-select.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  slider.tsx  sonner.tsx  spinner.tsx  switch.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  (+2 more)
src/hooks/: useEngine.ts
src/lib/: utils.ts
src/plugins/: AgentsField.tsx  GlobalField.tsx  agentplugin.tsx  globalplugin.tsx  llmplugin.tsx  mcpplugin.tsx  skillplugin.tsx
src/widgets/: ChatWidget.tsx
style/: base.css  index.css
ui-tests/: jupyter_server_test_config.py  package.json
ui-tests/tests/: jupydeep.spec.ts
