[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.5.8,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupydeep"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jupyterlab>=4.5.8",
    "jupyter_ydoc>=3.0.0",
    "jupyter-server-client>=0.1.1",
    "jupyter-kernel-client>=0.9.0",
    "jupyter-collaboration>=4.3.0",
    "matplotlib>=3.10.8",
    "pydantic-deep[all,liteparse]>=0.3.28",
    "pydantic-ai>=1.106.0",
    "fastmcp>=3.2.0",
    "mcp>=1.27.0",
    "deepdiff>=9.0.0",
    "jupyter-mcp-server",
    "seaborn>=0.13.2",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
test = ["ipykernel", "pytest>=7.0", "pytest-jupyter"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = [
    "jupydeep/labextension"
]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"jupydeep/labextension" = "share/jupyter/labextensions/jupydeep"
"install.json" = "share/jupyter/labextensions/jupydeep/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"
"assets/agent_specs" = "share/jupyter/jupydeep/agent_specs"

[tool.hatch.build.hooks.version]
path = "jupydeep/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupydeep/labextension/static/style.js",
    "jupydeep/labextension/package.json",
]
skip-if-exists = ["jupydeep/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupydeep/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.5.8,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.uv.sources]
jupyter-mcp-server = { git = "https://github.com/yezhenqing/jupyter-mcp-server.git" }

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "jupyter-builder>=0.0.3",
    "jupyter-console>=6.6.3",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestUnknownMarkWarning",
    "ignore::DeprecationWarning:jupyter_server",
    "ignore::DeprecationWarning:traitlets",
]
